--- a/Template/Changes.pod
+++ b/Template/Changes.pod
@@ -2,16 +2,30 @@
 
 Class::MakeMethods::Template::Changes - Revision history
 
-=head1 DESCRIPTION
 
-Revision history for Class::MakeMethods::Template:
+=head1 SYNOPSIS
 
-=over 4
+Revision history for Class::MakeMethods::Template.
 
-=item v1.003 - 2002/01/24
 
-Split Template and Emulator packages into their own distributions.
+=head1 CHANGES
 
-=back
+
+=head2 v1.004
+
+2002/02/07 Added missing *_reset => clear to number --counter interface.
+
+2002/01/26 Documentation fix from Adam Spiers.
+
+
+=head2 v1.003
+
+2002/01/24 Split Template and Emulator packages into their own distributions.
+
+
+=head1 SEE ALSO
+
+L<Class::MakeMethods::Template::ReadMe>
 
 =cut
+
